@@ -1,3 +1,7 @@
+2004-07-21 Mikhail Khodjaiants
+	Removed state validation from CDebugElement.
+	* CDebugTarget.java
+
 2004-07-20 Mikhail Khodjaiants
 	Added new state - "STEPPED".
 	* CDebugElementState.java
